--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
             type="checkbox"
             class="input-checkbox"
       />Musical Instrument</label>
+	<label>
+      <input
+            name="hobbies"
+            value="gardening"
+            type="checkbox"
+            class="input-checkbox"
+      />Gardening</label>
+    <label>
+       <input
+            name="hobbies"
+            value="painting"
+            type="checkbox"
+            class="input-checkbox"
+      />Painting</label>
   </div>
   
   
