--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<h1 id="title">Life after Coronavirus Lockdown</h1>
-<p id="description">What will you continue doing after the restrictions are lifted?</p>
+<header class="header">
+<h1 id="title" class="text-center">Life after Coronavirus Lockdown</h1>
+<p id="description" class="description text-center">What will you continue doing after the restrictions are lifted?</p>
+</header>
 <form id="survey-form">
   <div class="form-group">
   <label id="name-label" for="name">Name</label>
