--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<div class="container">
 <header class="header">
 <h1 id="title" class="text-center">Life after Coronavirus Lockdown</h1>
 <p id="description" class="description text-center">What will you continue doing after the restrictions are lifted?</p>
@@ -27,12 +28,12 @@
    />
   </div>
   <div class="form-group">
-  <label id="number-label" for="number">Age (Optional)</label>
+  <label id="number-label" for="number">Age<apan class="clue">(Optional)</span></label>
   <input 
          type="number"
          name="age"
          id="number"
-         class="form-conrtol"
+         class="form-control"
          placeholder="your age"
          min="12"
          max="120"
@@ -106,7 +107,7 @@
             type="radio" 
             class="input-radio"
       />Not likely</label>
-    <lable>
+    <label>
       <input
              name="likeliehood"
              value="0"
@@ -132,6 +133,8 @@
     ></textarea>
   </div>
   
-  <button type="submit" id="submit">Submit</button>
-  
+   <div class="form-group">
+     <button type="submit" id="submit">Submit</button>
+   </div>
 </form>
+</div>
