--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <div class="container">
 <header class="header">
-<h1 id="title" class="text-center">Life after Coronavirus Lockdown</h1>
+<h1 id="title" class="text-center">Life after the Coronavirus Lockdown</h1>
 <p id="description" class="description text-center">What will you continue doing after the restrictions are lifted?</p>
 </header>
 <form id="survey-form">
@@ -48,6 +48,7 @@
       <option value="mo">Working from home</option>
       <option value="og">Furloughed without pay</option>
       <option value="ka">Furloughed with pay</option>
+	  <option value="lo">Laid Off</option>
     </select>
   </div>
   
